// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes visibility 1`] = `
<Modal
  contentLabel="modal form"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      organization.change_visibility_form.header
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <div
      className="big-spacer-bottom"
      key="public"
    >
      <p>
        <a
          className="link-base-color link-no-underline"
          data-visibility="public"
          href="#"
          onClick={[Function]}
        >
          <i
            className="icon-radio spacer-right is-checked"
          />
          visibility.public
        </a>
      </p>
      <p
        className="text-muted spacer-top"
        style={
          Object {
            "paddingLeft": 22,
          }
        }
      >
        visibility.public.description.short
      </p>
    </div>
    <div
      className="big-spacer-bottom"
      key="private"
    >
      <p>
        <a
          className="link-base-color link-no-underline"
          data-visibility="private"
          href="#"
          onClick={[Function]}
        >
          <i
            className="icon-radio spacer-right"
          />
          visibility.private
        </a>
      </p>
      <p
        className="text-muted spacer-top"
        style={
          Object {
            "paddingLeft": 22,
          }
        }
      >
        visibility.private.description.short
      </p>
    </div>
    <Alert
      variant="warning"
    >
      organization.change_visibility_form.warning
    </Alert>
  </div>
  <footer
    className="modal-foot"
  >
    <Button
      className="js-confirm"
      onClick={[Function]}
    >
      organization.change_visibility_form.submit
    </Button>
    <ResetButtonLink
      className="js-modal-close"
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </footer>
</Modal>
`;

exports[`changes visibility 2`] = `
<Modal
  contentLabel="modal form"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      organization.change_visibility_form.header
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <div
      className="big-spacer-bottom"
      key="public"
    >
      <p>
        <a
          className="link-base-color link-no-underline"
          data-visibility="public"
          href="#"
          onClick={[Function]}
        >
          <i
            className="icon-radio spacer-right"
          />
          visibility.public
        </a>
      </p>
      <p
        className="text-muted spacer-top"
        style={
          Object {
            "paddingLeft": 22,
          }
        }
      >
        visibility.public.description.short
      </p>
    </div>
    <div
      className="big-spacer-bottom"
      key="private"
    >
      <p>
        <a
          className="link-base-color link-no-underline"
          data-visibility="private"
          href="#"
          onClick={[Function]}
        >
          <i
            className="icon-radio spacer-right is-checked"
          />
          visibility.private
        </a>
      </p>
      <p
        className="text-muted spacer-top"
        style={
          Object {
            "paddingLeft": 22,
          }
        }
      >
        visibility.private.description.short
      </p>
    </div>
    <Alert
      variant="warning"
    >
      organization.change_visibility_form.warning
    </Alert>
  </div>
  <footer
    className="modal-foot"
  >
    <Button
      className="js-confirm"
      onClick={[Function]}
    >
      organization.change_visibility_form.submit
    </Button>
    <ResetButtonLink
      className="js-modal-close"
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </footer>
</Modal>
`;

exports[`renders disabled 1`] = `
<Modal
  contentLabel="modal form"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      organization.change_visibility_form.header
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <div
      className="big-spacer-bottom"
      key="public"
    >
      <p>
        <a
          className="link-base-color link-no-underline"
          data-visibility="public"
          href="#"
          onClick={[Function]}
        >
          <i
            className="icon-radio spacer-right is-checked"
          />
          visibility.public
        </a>
      </p>
      <p
        className="text-muted spacer-top"
        style={
          Object {
            "paddingLeft": 22,
          }
        }
      >
        visibility.public.description.short
      </p>
    </div>
    <div
      className="big-spacer-bottom"
      key="private"
    >
      <p>
        <span
          className="text-muted cursor-not-allowed"
        >
          <i
            className="icon-radio spacer-right"
          />
          visibility.private
        </span>
      </p>
      <p
        className="text-muted spacer-top"
        style={
          Object {
            "paddingLeft": 22,
          }
        }
      >
        visibility.private.description.short
      </p>
    </div>
  </div>
  <footer
    className="modal-foot"
  >
    <Button
      className="js-confirm"
      onClick={[Function]}
    >
      organization.change_visibility_form.submit
    </Button>
    <ResetButtonLink
      className="js-modal-close"
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </footer>
</Modal>
`;
